fixed few alignments

--- a/css/common.css
+++ b/css/common.css
@@ -10,15 +10,17 @@
 .h-font {
     font-family: "Merienda", cursive;
 }
-/* Chrome, Safari, Edge, Opera */
+
 input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
-/* Firefox */
+
 input[type=number] {
-    -moz-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
+
 .custom-bg {
     background-color: var(--teal);
     border: 1px solid var(--teal_hover);
